# codex-rivet

./: README.md
esp32_firmware/: CMakeLists.txt  sdkconfig.defaults
esp32_firmware/main/: CMakeLists.txt  app_config.c  button.c  config_storage.c  led_status.c  main.c  state_machine.c  telemetry_log.c  uart_comm.c  web_server.c
esp32_firmware/main/include/: app_config.h  button.h  config_storage.h  led_status.h  state_machine.h  telemetry_log.h  uart_comm.h  web_server.h
stm32_firmware/Core/Inc/: app_config.h  fault_handler.h  main.h  motor_control.h  power_stage.h  telemetry.h  uart_protocol.h
stm32_firmware/Core/Src/: fault_handler.c  main.c  motor_control.c  power_stage.c  telemetry.c  uart_protocol.c
web_interface/: index.html
